# contiinia

./: .gitignore  Dockerfile  README.md  build.sh  pyproject.toml
contiinia/: __init__.py  cli.py  errors.py
contiinia/commands/: __init__.py  exportar_cmd.py  lote_cmd.py  resumen_cmd.py  rfc_cmd.py  tabla_cmd.py  version_cmd.py  xml_cmd.py
contiinia/models/: __init__.py  base.py  cfdi.py  exportar.py  lote.py  resumen.py  rfc.py  tabla.py  version.py
contiinia/parsers/: __init__.py  exportar.py  lote.py  resumen.py  rfc.py  tabla.py  xml.py
fixtures/: cfdi_3.3_rechazado.xml  cfdi_duplicado.xml  cfdi_egreso.xml  cfdi_ingreso.xml  cfdi_iva_exento.xml  cfdi_iva_frontera.xml  cfdi_nomina.xml  cfdi_pago.xml  cfdi_traslado.xml  cfdi_xml_corrupto.xml  tabla_conceptos.csv  tabla_conceptos.xlsx
fixtures/tabla_contpaqi/: _gen_fixtures.py  add_hoja_electronica.xlsx  comercial_movimientos.xlsx  factura_completa_descuento.xlsx  factura_electronica_conceptos.xlsx  nomina_conceptos.xlsx
fixtures/tabla_reales/: honorarios_legacy.xls  inventario_agro.ods  papeleria_multisheet.xlsx  servicios_ti.xlsx
scripts/: descargar-fixtures.sh
tests/: conftest.py
tests/adversarial/: __init__.py  test_precision_decimal.py  test_resumen_adversarial.py  test_rfc_adversarial.py  test_xml_adversarial.py
tests/integration/: test_cmd_exportar.py  test_cmd_lote.py  test_cmd_resumen.py  test_cmd_rfc.py  test_cmd_tabla.py  test_cmd_version.py  test_cmd_xml.py
tests/unit/: test_lote.py  test_resumen.py  test_rfc.py  test_tabla.py  test_tabla_b1_b2.py  test_tabla_contpaqi.py  test_version.py  (+4 more)
